# rit

./: Cargo.toml  FETCH_TESTING.md  README.md  debug_github_fetch.sh  index  quick_test.sh  simple_test.sh  test_fetch.sh  your_program.sh
.cargo/: config.toml
.github/workflows/: rust-ci.yml
src/: main.rs
src/cli/: args.rs  command.rs
src/command/: add.rs  branch.rs  cat_file.rs  checkout.rs  commit.rs  commit_tree.rs  fetch.rs  hash_object.rs  init.rs  merge.rs  mod.rs  pull.rs  push.rs  read_tree.rs  remote.rs  rm.rs  symbolic_ref.rs  update_index.rs  update_ref.rs  write_tree.rs
src/utils/: blob.rs  commit.rs  error.rs  fs.rs  hash.rs  index.rs  mod.rs  objtype.rs  packfile.rs  packfile_new.rs  protocol.rs  refs.rs  test.rs  tree.rs  zlib.rs
tests/: merge_simple_conflict  test_add_commit  test_bin  test_branch_checkout  test_merge  test_merge1  test_rm  test_rm_branch
