[package]
name = "git"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.35", features = ["derive"] }
diffy = "0.4.2"
flate2 = "1.1.1"
hex = "0.4.3"
itertools = "0.14.0"
nom = "8.0.0"
regex = "1.10"
sha1 = "0.10.6"
similar = "2.7.0"
tempfile = "3.19.1"
# 网络和HTTP支持
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.4"
# 更好的错误处理
anyhow = "1.0"
# 异步支持 (可选)
tokio = { version = "1.0", features = ["full"] }
